main button fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -50,7 +50,8 @@
         gap: .5rem;
 
         button {
-            background: $red;
+            // background: $red;
+            background: #E60000;
             border: none;
             border-radius: .25rem;
             color: #fff;
